force-app/main/default/objects/RetailStore/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <description>Store Code</description>
    <label>Store Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>