force-app/main/default/objects/RetailStore/fields/StoreTypeID__c.field-meta.xml
<CustomField>
    <fullName>StoreTypeID__c</fullName>
    <description>StoreType ID</description>
    <label>StoreTypeID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>