force-app/main/default/objects/RetailStore/listViews/All_RetailStore.listView-meta.xml
<ListView>
    <fullName>All_RetailStore</fullName>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>